tests/unit/default/syntax-error/038-create-table-parens-name-colon-type-params-null-eq-num.x.t
---- IN ----
+%table(id:decimal(10,2)?=42|
---- OUT ----
---- ERR ----
syntax: expected `)` after `...(10,2)?=42` near `|` at position 28 - at line 1
---- EXIT ----
1
